--- a/catalog/view/theme/default/stylesheet/style000.css
+++ b/catalog/view/theme/default/stylesheet/style000.css
@@ -6437,3 +6437,11 @@ label.nl_header {
     background-repeat: no-repeat;
     padding-bottom: 125px;
 }
+
+.fr {
+    float: right;
+}
+
+.fl {
+    float: left;
+}
