--- a/catalog/view/theme/default/stylesheet/global00.css
+++ b/catalog/view/theme/default/stylesheet/global00.css
@@ -50,7 +50,7 @@ body {font:normal 12px Tahoma, Geneva, sans-serif;;color:black;}
 .hidden, .block_hidden_only_for_screen {display:none;}
 
 .clearblock {height:0;clear:both;overflow:hidden;font-size:0;line-height:0;}
-.clearfix:after {height:0;display:block;clear:both;font-size:0;visibility:hidden;content:".";}
+.clearfix:after, #content:after {height:0;display:block;clear:both;font-size:0;visibility:hidden;content:".";}
 
 .center_column p {color:black;}
 .center_column a {color:#333;text-decoration:none;}
@@ -190,6 +190,36 @@ select {font:normal 12px "Arial";color:#000;}
 .columns input[type=file] {background:#fff;border:1px solid #ddd;}
 .columns textarea {width:668px !important;height:100px;overflow:auto !important;}
 
+#content label,
+#content .radio span,
+#content .select span {font:normal 12px "Arial";color:#555;}
+
+#content input[type=text],
+#content input[type=password],
+#content textarea,
+#content select {padding:3px;background:#fff;border:1px solid #ddd;
+-webkit-transition:all .5s linear;
+   -moz-transition:all .5s linear;
+    -ms-transition:all .5s linear;
+     -o-transition:all .5s linear;
+        transition:all .5s linear;
+}
+
+#content select {padding:0px;}
+
+#content input[type=text]:focus,
+#content input[type=password]:focus,
+#content textarea:focus,
+#content select:focus {border-color:#777;outline:1px solid #777;
+-webkit-transition:all .2s linear;
+   -moz-transition:all .2s linear;
+    -ms-transition:all .2s linear;
+     -o-transition:all .2s linear;
+        transition:all .2s linear;
+}
+
+#content input[type=file] {background:#fff;border:1px solid #ddd;}
+#content textarea {width:668px !important;height:100px;overflow:auto !important;}
 /* std */
 form.std {clear:both;}
 form.std h3 {padding-bottom:7px;border-width:0 0 1px 0;border-style:solid;}
@@ -355,15 +385,16 @@ header {padding:160px 0 0 0;position:relative;}
 
 #slogan{
     position: absolute;
-    top: 70px;
+    top: 58px;
     color: #555;
     font-size: 30px;
     text-align: center;
-    width: 95%; font-family:'UTM_Bebas';
+    width: 95%;
+    font-family:'UTM_Bebas';
 }
 
 /* ????? currencies.tpl ????? */
-#header {;z-index:10000; margin-top:30px}
+#header {z-index:10000; margin-top:30px}
 
 .infoBar {
     background: none repeat scroll 0 0 #222;
@@ -1025,7 +1056,16 @@ footer { width:100%; margin:0 auto; padding:0;}
 /****************************************** center column styles ******************************************/
 /* breadcrumb.tpl */
 
-.breadcrumb {margin:10px 0 0 0;padding:10px 13px 10px; background:#000; text-transform:uppercase; font-family:Tahoma, Geneva, sans-serif; font-size:12px;}
+.breadcrumb, .pathway-items a {
+    margin: 0px;
+    color: #000;
+    font-family:Tahoma, Geneva, sans-serif;
+    font-size:12px;
+    margin-top: 10px;
+}
+.pathway-items {
+    margin-top: 10px;
+}
 .breadcrumb_inner {}
 
 .breadcrumb span,
@@ -1035,8 +1075,6 @@ footer { width:100%; margin:0 auto; padding:0;}
 
 .breadcrumb .navigation-pipe {width:5px;height:0;display:inline-block;padding:12px 0 0 0;overflow:hidden;margin:0 7px;background:url(http://livedemo00.template-help.com/prestashop_41289/themes/theme489/img/icon/pipe.png) 50% 6px no-repeat;}
 
-.breadcrumb a {color:#999;text-decoration:none;}
-.breadcrumb a:hover {color:#fff;}
 
 
 /* category.tpl */
@@ -2288,13 +2326,19 @@ position: absolute;
 #zara16{width:100px; height:103px; margin-bottom:55px; border: 1px solid #CDCDCD;}
 #tinsp ul li{margin:314px 0 -643px 0}
 #tinsp ul{margin-top:5px}
-#tinsp ul li button{   background: none repeat scroll 0 0 #333333;
-                       color: #FFFFFF;
-                       font-family: 'UTM_Bebas';
-                       font-size: 20px;
-                       height: 32px;
-                       margin-left: 122px;
-                       width: 108px;padding-bottom: 3px; margin-top:7px}
+#tinsp ul li button{   
+    background: #000;
+    color: #FFFFFF;
+    font-family: 'UTM_Bebas';
+    font-size: 20px;
+    height: 32px;
+    margin-left: 122px;
+    width: 108px;padding-bottom: 3px; margin-top:7px;
+    border: none;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    webkit-border-radius: 5px;
+}
 @font-face
 {
     font-family: UTM_Avo;
@@ -2429,6 +2473,11 @@ position: absolute;
 .boder-1{
     padding:2px;
 }
+
+
+
+
+
 #tim{background: #606060;
      background: -moz-linear-gradient(top,#606060 0%,#2F2F2F 100%);
      background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#606060),color-stop(100%,#2F2F2F));
@@ -2521,15 +2570,12 @@ position: absolute;
 .ui-border th #tt{border:1px solid #CCC}
 .ui-border .pt{padding-top:20px}
 
-tbody {height: 150px; }
 
 span.error {
     color: #FF0000;
     display: block;
 }
-#contact_frm input[type="text"]{
-    width: 250px;
-}
+
 .clear {
     clear: both;
 }
@@ -2538,4 +2584,65 @@ span.error {
 }
 .ui-tabViewCont {
     border: 1px solid #ccc;
+}
+#content #column-right {
+    float: right;
+}
+
+/* button */
+a.button, input.button {
+    cursor: pointer;
+    color: #FFFFFF;
+    line-height: 12px;
+    font-family: 'UTM_Bebas';
+    font-size: 12px;
+    font-weight: bold;
+    -webkit-border-radius: 7px 7px 7px 7px;
+    -moz-border-radius: 7px 7px 7px 7px;
+    -khtml-border-radius: 7px 7px 7px 7px;
+    border-radius: 7px 7px 7px 7px;
+    -webkit-box-shadow: 0px 2px 2px #DDDDDD;
+    -moz-box-shadow: 0px 2px 2px #DDDDDD;
+    box-shadow: 0px 2px 2px #DDDDDD;
+}
+a.button {
+	display: inline-block;
+	text-decoration: none;
+	padding: 3px 10px 3px 10px;
+}
+
+.buttons {
+        color: #FFFFFF;
+        font-family: 'UTM_Bebas';
+        font-size: 20px;
+        height: 32px;
+        padding-bottom: 3px;
+        margin-top: 7px;
+}
+.buttons .left {
+	float: left;
+	text-align: left;
+}
+.buttons .right {
+	float: right;
+	text-align: right;
+}
+.buttons .center {
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+.frn_form .txt_label {
+    font-family: "UTM_Bebas";
+    font-size: 18px;
+    font-weight: normal;
+}
+.frn_register input[type="text"], .frn_register input[type="password"] {
+    width: 250px;
+}
+.frn_form input[type="text"], .frn_form input[type="password"] {
+     width: 250px;
+}
+#contact_frm input[type="text"]{
+    width: 250px;
 }
