--- a/catalog/view/theme/default/stylesheet/register.css
+++ b/catalog/view/theme/default/stylesheet/register.css
@@ -327,7 +327,16 @@ font-family:utm bebas; padding-bottom:8px; margin:40px 0 0 30px; position:absolu
     margin-left: 328px;
     margin-top: -352px;}
 #ngan img{margin:-20px 0px 0px 30px;}
-.float-l2{margin:5px 0 0 -3px}
+.float-l2{margin:5px 0 0 -3px;
+         border: none; padding: 8px 10px; 
+         background: #000; color: #fff;
+         border-radius: 5px;
+         -moz-border-radius: 5px;
+         webkit-border-radius: 5px;
+}
+button.float-l2:hover {
+    color: #ccc;
+}
 #shop{margin-top:10px}
 
 #gioithieuth{color:#666; font-size:14px}
